# OCP.wasm

./: .gitignore  CMakeLists.txt  README.md  index.html  patch_OCP.cmake  patch_OpenCASCADE.cmake  patch_pybind11.cmake  patch_rapidjson.cmake  pyproject.toml  repair_and_optimize_wasm.py  repair_wasm.py  requirements-ci.txt  requirements.txt
.github/: renovate.json5
.github/scripts/: wheel_up_to_date.sh  xbuildenv_data.sh
.github/workflows/: main.yml
build123d/: README.md  bootstrap_in_pyodide.py  crossplatformtricks.py  requirements-dev.txt  requirements-pyodide.txt  requirements-stable.txt  test.py  test_bootstrap_browser.py
cadquery-ocp/: CMakeLists.txt  index.html  patch_OCP.cmake  patch_OpenCASCADE.cmake  patch_pybind11.cmake  pyproject.toml  repair_wasm.py
cadquery-ocp-debug/: index.html
cadquery-ocp-novtk/: CMakeLists.txt  index.html  patch_OCP.cmake  patch_OpenCASCADE.cmake  pyproject.toml  repair_wasm.py
cadquery-ocp-novtk-debug/: index.html
lib3mf/: CMakeLists.txt  Lib3MF.py.patch  index.html  lib3mf-2.4.1-cp312-cp312-pyodide_2024_0_wasm32.whl  lib3mf-2.4.1-cp313-cp313-pyodide_2025_0_wasm32.whl  patch.cmake  pyproject.toml
lib3mf-debug/: index.html  lib3mf_debug-2.4.1-cp312-cp312-pyodide_2024_0_wasm32.whl  lib3mf_debug-2.4.1-cp313-cp313-pyodide_2025_0_wasm32.whl
package_index/: build.py
util/: package_index.py  set_old_timestamp.sh  set_timestamps.py  set_timestamps_to_last_git_commit.sh
