[build-system]
requires = ["scikit-build-core==0.11.5"]
build-backend = "scikit_build_core.build"
# Warning: `pyodide build` requires `--exports=whole_archive` to avoid missing symbols from emscripten exports

[project]
name = "cadquery-ocp"
dynamic = ["version"]
description = "Python bindings for OCP using scikit-build-core"
authors = [{ name = "Yeicor" }]
license = { text = "MIT" }


[tool.scikit-build]
cmake.version = ">=3.5"
cmake.build-type = "Release" # Can be overridden by SKBUILD_CMAKE_BUILD_TYPE
build-dir = "build/{wheel_tag}-{build_type}"

[tool.scikit-build.cmake.define]
# Common
CMAKE_POLICY_VERSION_MINIMUM="3.5"
# OCCT
BUILD_LIBRARY_TYPE="Static"
BUILD_MODULE_Draw="OFF"
BUILD_DOC_Overview="OFF"
BUILD_MODULE_DETools="OFF"
USE_RAPIDJSON="ON" # Enables GLTF export
USE_FREETYPE="ON" # Enables text support
USE_TK="OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'URL *"https://github.com/CadQuery/OCP/releases/download/(?P<value>[^/]+)'
