[build-system]
# requires-python = ">=3.8" # XXX: Recommended to set this, but unsupported by pyodide...
requires = ["scikit-build-core==0.11.4", "cibuildwheel==3.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "lib3mf"
version = "2.4.1"
description = "Python bindings for lib3mf using scikit-build-core"
authors = [{ name = "Yeicor" }]
license = { text = "MIT" }


[tool.scikit-build]
cmake.version = ">=3.5"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}-{build_type}"
wheel.packages = [] # disable Python file inclusion entirely, and rely only on CMake’s install mechanism
sdist.include = ["CMakeLists.txt"]

[tool.scikit-build.cmake.define]
# Common
CMAKE_POLICY_VERSION_MINIMUM="3.5"
# Lib3MF
LIB3MF_TESTS="OFF"


[tool.cibuildwheel]
enable = ["cpython-prerelease", "pyodide-prerelease"]
test-command = "python -c \"import lib3mf; help(lib3mf);\"" # TODO: Real tests...
#environment.CIBW_PROJECT_REQUIRES_PYTHON = ">=3.8"

[tool.cibuildwheel.linux]
environment-pass = ["CFLAGS", "CXXFLAGS", "LDFLAGS"] # Uses docker, so need to pass host variables manually

[tool.cibuildwheel.pyodide]
before-all = "command -v wasm-opt >/dev/null 2>&1 || { (command -v apt >/dev/null && sudo apt update && sudo apt install -y binaryen) || (command -v dnf >/dev/null && sudo dnf install -y binaryen) || (command -v yum >/dev/null && sudo yum install -y binaryen) || (command -v pacman >/dev/null && sudo pacman -Sy --noconfirm binaryen) || { echo \"Error: Could not detect supported package manager to install wasm-opt (binaryen).\"; exit 1; }; }; wasm-opt --version; command -v ccache >/dev/null 2>&1 || { (command -v apt >/dev/null && sudo apt update && sudo apt install -y ccache) || (command -v dnf >/dev/null && sudo dnf install -y ccache) || (command -v yum >/dev/null && sudo yum install -y ccache) || (command -v pacman >/dev/null && sudo pacman -Sy --noconfirm ccache) || { echo \"Error: Could not detect supported package manager to install ccache.\"; exit 1; }; }; ccache --version; "
#build-frontend = "build[uv]; args: --exports=whole_archive"
#skip = "cp3{7,8,9,10,11,12}-*_wasm32"  # Disabled due to emscripten being too old
environment.CFLAGS="-fPIC -sSIDE_MODULE -D__linux__ -D__STDC_WANT_LIB_EXT1__"
environment.CXXFLAGS="-fPIC -sSIDE_MODULE"
environment.LD_FLAGS="-fPIC -sSIDE_MODULE"


