[build-system]
requires = ["scikit-build-core==0.11.4"]
build-backend = "scikit_build_core.build"

[project]
name = "lib3mf"
dynamic = ["version"]
description = "Python bindings for lib3mf using scikit-build-core"
authors = [{ name = "Yeicor" }]
license = { text = "MIT" }


[tool.scikit-build]
cmake.version = ">=3.5"
cmake.build-type = "Release" # Can be overridden by SKBUILD_CMAKE_BUILD_TYPE
build-dir = "build/{wheel_tag}-{build_type}"

[tool.scikit-build.cmake.define]
# Common
CMAKE_POLICY_VERSION_MINIMUM="3.5"
# Lib3MF
LIB3MF_TESTS="OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'GIT_TAG *"v(?P<value>[^"]+)"'


[tool.cibuildwheel]
enable = ["cpython-prerelease", "pyodide-prerelease"]
test-command = "python -c \"import lib3mf; help(lib3mf);\"" # TODO: Real tests...

[tool.cibuildwheel.linux]
environment-pass = ["CFLAGS", "CXXFLAGS", "LDFLAGS"] # Uses docker, so need to pass host variables manually

[tool.cibuildwheel.pyodide]
# Wasm-opt is heavily recommended, so we install it if not present
before-all = "command -v wasm-opt >/dev/null 2>&1 || { (command -v apt >/dev/null && sudo apt update && sudo apt install -y binaryen) || (command -v dnf >/dev/null && sudo dnf install -y binaryen) || (command -v yum >/dev/null && sudo yum install -y binaryen) || (command -v pacman >/dev/null && sudo pacman -Sy --noconfirm binaryen) || { echo \"Error: Could not detect supported package manager to install wasm-opt (binaryen).\"; exit 1; }; }; wasm-opt --version; command -v ccache >/dev/null 2>&1 || { (command -v apt >/dev/null && sudo apt update && sudo apt install -y ccache) || (command -v dnf >/dev/null && sudo dnf install -y ccache) || (command -v yum >/dev/null && sudo yum install -y ccache) || (command -v pacman >/dev/null && sudo pacman -Sy --noconfirm ccache) || { echo \"Error: Could not detect supported package manager to install ccache.\"; exit 1; }; }; ccache --version; "
environment.CFLAGS="-fPIC -sSIDE_MODULE -D__linux__ -D__STDC_WANT_LIB_EXT1__ $CFLAGS"
environment.CXXFLAGS="-fPIC -sSIDE_MODULE $CXXFLAGS"
environment.LDFLAGS="-fPIC -sSIDE_MODULE $LDFLAGS"


