[build-system]
requires = ["scikit-build-core==0.11.5"]
build-backend = "scikit_build_core.build"

[project]
name = "lib3mf"
dynamic = ["version"]
description = "Python bindings for lib3mf using scikit-build-core"
authors = [{ name = "Yeicor" }]
license = { text = "MIT" }


[tool.scikit-build]
cmake.version = ">=3.5"
cmake.build-type = "Release" # Can be overridden by SKBUILD_CMAKE_BUILD_TYPE
build-dir = "build/{wheel_tag}-{build_type}"

[tool.scikit-build.cmake.define]
# Common
CMAKE_POLICY_VERSION_MINIMUM="3.5"
# Lib3MF
CMAKE_C_FLAGS="-D__linux__ -D__STDC_WANT_LIB_EXT1__ ${CFLAGS}"
LIB3MF_TESTS="OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'GIT_TAG *"v(?P<value>[^"]+)"'
